--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,65 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: #333;
+  background-color:#333;
   font-family: sans-serif;
   font-size: 10px;
 }
 
 .container {
-  margin: 0 auto;
+  box-sizing: border-box;
+  margin: auto;
   width: 420px;
+  height: 50px;
 }
 
 nav {
-  margin: 0 auto;
+  box-sizing: border-box;
   padding: 10px 0 15px 15px;
   position: fixed;
   width: 420px;
+  height: 50px;
+  background-color: #000000
 }
 
 .restaurant-list {
+  box-sizing: border-box;
+  display: block;
   padding-top: 50px;
+  background: #E5E5E5;
 }
+
+.arrow-left {
+  float: left;
+  padding-top: 5px;
+}
+
+div.arrow {
+  box-sizing: border-box;
+  float: right;
+}
+
+div.location {
+  box-sizing: border-box;
+  padding: 25px;
+  border-bottom: 1px solid grey;
+}
+
+h1 {
+  font-size: 16px;
+  font-weight: bolder;
+  line-height: 1.5em;
+}
+
+h3 {
+  font-size: 14px;
+  font-weight: normal;
+}
+
+a {
+  text-decoration: inherit;
+}
+
+a:hover { color:#0070BC; } /* mouse over */
