--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ nav {
   box-sizing: border-box;
   display: block;
   padding-top: 50px;
-  background: #E5E5E5;
 }
 
 .arrow-left {
@@ -39,12 +38,19 @@ nav {
 div.arrow {
   box-sizing: border-box;
   float: right;
+  margin-top: -30px;
 }
 
 div.location {
   box-sizing: border-box;
   padding: 25px;
   border-bottom: 1px solid grey;
+  background: #E5E5E5;
+}
+
+.location:hover {
+  background: #cccccc;
+    cursor: pointer;
 }
 
 h1 {
@@ -59,6 +65,7 @@ h3 {
 }
 
 a {
+  display: block;
   text-decoration: inherit;
 }
 
